--- a/Travel Forest/index.html
+++ b/Travel Forest/index.html
@@ -24,6 +24,25 @@
     <div id="dimmed-bg"></div>
     <section id="full-site">
 
+        <aside id="register-side-bar"> 
+            <div id="empty-section"></div>
+            <section id="visible-section">
+                <span id="call-num"><i class="fas fa-phone">
+                </i>1-300-600-9000</span>
+                <h4 id="reg">Register</h4>
+            </section>
+            <section id="form-section">
+                <h2>Register your account</h2>
+                <form action="index.html" autocomplete="off" method="POST">
+                    <input type="email" name="email" placeholder="Email" required>
+                    <input type="password" name="pass" placeholder="Password" required>
+                    <input type="password" name="con-pass" placeholder="Confirm password" required>
+                    <input type="submit" name="submit" value="Register">
+                </form>
+                <p>Already have an account?<a href="">Login</a>.</p>
+            </section>
+        </aside>
+        
         <section id="above-fold">
             <nav>
                 <ul>
@@ -45,30 +64,155 @@
             </article>
 
         </section>
+        
+        <section id="info-section">
+            <article>
+                <figure></figure>
+                <div>
+                    <h2>Travel Worldwide</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Aspernatur commodi omnis aper</p>
+                </div>
+            </article>
+            <article>
+                <figure></figure>
+                <div>
+                    <h2>Huge Savings</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Aspernatur commodi omnis aper</p>
+                </div>
+            </article>
+            <article>
+                <figure></figure>
+                <div>
+                    <h2>Discover something new</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Aspernatur commodi omnis aper</p>
+                </div>
+            </article>
+        </section>
 
-        <aside id="register-side-bar"> 
-            <div id="empty-section"></div>
-            <section id="visible-section">
-                <span id="call-num"><i class="fas fa-phone">
-                </i>1-300-600-9000</span>
-                <h4 id="reg">Register</h4>
-            </section>
-            <section id="form-section">
-                <h2>Register your account</h2>
-                <form action="index.html" autocomplete="off" method="POST">
-                    <input type="email" name="email" placeholder="Email" required>
-                    <input type="password" name="pass" placeholder="Password" required>
-                    <input type="password" name="con-pass" placeholder="Confirm password" required>
-                    <input type="submit" name="submit" value="Register">
-                </form>
-                <p>Already have an account?<a href="">Login</a>.</p>
-            </section>
-        </aside>
+        <section id="current-users">
+            <header>
+                <h4>Total vacations bookes this month</h4>
+                <h3 id="total-users">106,011</h3>
+            </header>
+        </section>
 
+        <section id="locations">
+            <h2>Already a member?</h2>
+            <a href="#" id="header-link">Book a vacation now!</a>
+            <input type="text" name="search" autocomplete="off" placeholder="Search available locations">
+            <h4>Find location by country</h4>
+            <ul>
+                <li><a href="">Spain</a></li>
+                <li><a href="">Morroco</a></li>
+                <li><a href="">Italy</a></li>
+                <li><a href="">India</a></li>
+                <li><a href="">United States</a></li>
+                <li><a href="">Thailand</a></li>
+                <li><a href="">Scotland</a></li>
+                <li><a href="">Greece</a></li>
+                <li><a href="">Sweden</a></li>
+                <li><a href="">Brazil</a></li>
+                <li><a href="">Ukraine</a></li>
+            </ul>
+        </section>
+
+        <section id="testimonials">
+            <div id="testimonials-bg"></div>
+            <article>
+                <header>
+                    <h2></h2>
+                    <h5>Rated <span>9.6/10</span><br> By our verified users</h5>
+
+                </header>
+                <section id="reviews">
+                    <div class="review">
+                        <div class="reviewer-details">
+                            <figure></figure>
+                            <div class="details">
+                                <div>
+                                    <div class="name">Misha Storozhuk</div>
+                                    <div class="from">Avid Forest Travel User</div>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="reviewer-text">Lorem ipsum dolor sit amet 
+                            consectetur adipisicing elit. Atque neque deleniti natus! 
+                            Autem voluptates est rem molestiae dicta voluptatum 
+                            provident quod sapiente dolore veritatis quam, nulla vel. 
+                            Eveniet, pariatur fugiat.</p>
+                    </div>
+                    <div class="review">
+                        <div class="reviewer-details">
+                            <figure></figure>
+                            <div class="details">
+                                <div>
+                                    <div class="name">Suzie Smith</div>
+                                    <div class="from">CEO at GetBizzie</div>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="reviewer-text">Lorem ipsum dolor sit amet 
+                            consectetur adipisicing elit. Atque neque deleniti natus! 
+                            Autem voluptates est rem molestiae dicta voluptatum 
+                            provident quod sapiente dolore veritatis quam, nulla vel. 
+                            Eveniet, pariatur fugiat.</p>
+                    </div>
+                    <div class="review">
+                        <div class="reviewer-details">
+                            <figure></figure>
+                            <div class="details">
+                                <div>
+                                    <div class="name">Marie Arden</div>
+                                    <div class="from">I'm a globetrotter</div>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="reviewer-text">Lorem ipsum dolor sit amet 
+                            consectetur adipisicing elit. Atque neque deleniti natus! 
+                            Autem voluptates est rem molestiae dicta voluptatum 
+                            provident quod sapiente dolore veritatis quam, nulla vel. 
+                            Eveniet, pariatur fugiat.</p>
+                    </div>
+                </section>
+                <a href="#">Leave a review</a>
+                <a href="#">See all customer reviews</a>
+            </article>
+        </section>
+
+        <section id="weekly-deal">
+            <h2>Deal of the week</h2>
+            <article id="deal">
+                <div id="deal-details">
+                    <h3>Athnes, Greece</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Quas quisquam porro quis suscipit assumenda cum provident 
+                        temporibus similique sunt doloremque!</p>
+                    <a href="#">Claim your vacation now</a>
+                </div>
+                <figure></figure>
+            </article>
+        </section>
+
+        <footer id="footer">
+            <h5>Travel Forest</h5>
+            <h6>Find us on Social Media</h6>
+            <div id="social-icons">
+                <img src="images/social/facebook.png" alt="A facebook icon.">
+                <img src="images/social/instagram.png" alt="A instagram icon.">
+                <img src="images/social/pinterest.png" alt="A pinterest icon.">
+                <img src="images/social/twitter.png" alt="A twitter icon.">
+                <img src="images/social/youtube.png" alt="A youtube icon.">
+            </div>
+            <hr>
+            <h6>Copyright 2020 - All Rights Reserved</h6>
+        </footer>
     </section>
 
-    <script src="script.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
